@@ -38,4 +38,4 @@ B tools/coqdoc
 S dev
 B dev
 
-PKG threads.posix
+PKG threads threads.posix
